{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 75,
  "lineage": "89df4fd6-3a98-137f-5276-734747ceb6b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0da3a14344acbe567",
            "arn": "arn:aws:ec2:us-west-1:285795751798:instance/i-01a908746c08abab2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ecr-readonly-profile",
            "id": "i-01a908746c08abab2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key_primary",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c512572b4ff48069"
              }
            ],
            "primary_network_interface_id": "eni-0c512572b4ff48069",
            "private_dns": "ip-172-16-1-162.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.162",
            "public_dns": "ec2-54-176-21-21.us-west-1.compute.amazonaws.com",
            "public_ip": "54.176.21.21",
            "region": "us-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b71447906712c757",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05cf1e71b62615f4c",
            "tags": {
              "Name": "backend-primary"
            },
            "tags_all": {
              "Name": "backend-primary"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b128bacce99ec1f",
              "sg-0bcdd157e5b3a90dd"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "i-01a908746c08abab2",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_key_pair.key_pair_primary",
            "aws_security_group.allow_egress_primary",
            "aws_security_group.backend",
            "aws_security_group.db_primary",
            "data.aws_ami.ubuntu",
            "data.aws_iam_policy_document.ec2_trust",
            "module.db_primary.module.db_instance.aws_cloudwatch_log_group.this",
            "module.db_primary.module.db_instance.aws_db_instance.this",
            "module.db_primary.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db_primary.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.db_primary.module.db_instance.random_id.snapshot_identifier",
            "module.db_primary.module.db_option_group.aws_db_option_group.this",
            "module.db_primary.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db_primary.module.db_subnet_group.aws_db_subnet_group.this",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this",
            "random_password.db",
            "tls_private_key.key_primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_egress_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:security-group/sg-02b128bacce99ec1f",
            "description": "Allow all outbound traffic in primary vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b128bacce99ec1f",
            "ingress": [],
            "name": "allow-egress-primary",
            "name_prefix": "",
            "owner_id": "285795751798",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_egress_primary"
            },
            "tags_all": {
              "Name": "allow_egress_primary"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5b8d437986964db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "sg-02b128bacce99ec1f",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:security-group/sg-0bcdd157e5b3a90dd",
            "description": "SSH from anywhere; 8080 from anywhere",
            "egress": [],
            "id": "sg-0bcdd157e5b3a90dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "285795751798",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b5b8d437986964db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "sg-0bcdd157e5b3a90dd",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:security-group/sg-095510f395c6cb629",
            "description": "allow traffic from ec2 subnets in primary vpc",
            "egress": [],
            "id": "sg-095510f395c6cb629",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bcdd157e5b3a90dd"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-primary",
            "name_prefix": "",
            "owner_id": "285795751798",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-primary"
            },
            "tags_all": {
              "Name": "db-primary"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5b8d437986964db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "sg-095510f395c6cb629",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:security-group-rule/sgr-0219898ba9242a6ec",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0219898ba9242a6ec",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-1",
            "security_group_id": "sg-02b128bacce99ec1f",
            "security_group_rule_id": "sgr-0219898ba9242a6ec",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "sgr-0219898ba9242a6ec",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_security_group.allow_egress_primary",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "backend_http_in_any",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:security-group-rule/sgr-09da4a2edd3b6b7b2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-09da4a2edd3b6b7b2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-1",
            "security_group_id": "sg-0bcdd157e5b3a90dd",
            "security_group_rule_id": "sgr-09da4a2edd3b6b7b2",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "sgr-09da4a2edd3b6b7b2",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_security_group.backend",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "backend_ssh_in_any",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:security-group-rule/sgr-0ed6e2269abb8328a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0ed6e2269abb8328a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-1",
            "security_group_id": "sg-0bcdd157e5b3a90dd",
            "security_group_rule_id": "sgr-0ed6e2269abb8328a",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "sgr-0ed6e2269abb8328a",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_security_group.backend",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_from_ec2_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:security-group-rule/sgr-0c4cf3199cbf9ac9b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0c4cf3199cbf9ac9b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bcdd157e5b3a90dd",
            "region": "us-west-1",
            "security_group_id": "sg-095510f395c6cb629",
            "security_group_rule_id": "sgr-0c4cf3199cbf9ac9b",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "sgr-0c4cf3199cbf9ac9b",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.db_primary",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:network-acl/acl-0a52e64003e781ca0",
            "default_network_acl_id": "acl-0a52e64003e781ca0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a52e64003e781ca0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "285795751798",
            "region": "us-west-1",
            "subnet_ids": [
              "subnet-00f1c7a95fe784c94",
              "subnet-05cf1e71b62615f4c",
              "subnet-06c0aeae7ba4cfde8",
              "subnet-0f1a564c1c0979c6a"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "vpc_id": "vpc-0b5b8d437986964db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:route-table/rtb-0c3344bbdf8e18e0e",
            "default_route_table_id": "rtb-0c3344bbdf8e18e0e",
            "id": "rtb-0c3344bbdf8e18e0e",
            "owner_id": "285795751798",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b5b8d437986964db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:security-group/sg-0801367255621d1de",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0801367255621d1de",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "285795751798",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "vpc_id": "vpc-0b5b8d437986964db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:internet-gateway/igw-00774438c7f345a00",
            "id": "igw-00774438c7f345a00",
            "owner_id": "285795751798",
            "region": "us-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "vpc_id": "vpc-0b5b8d437986964db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00774438c7f345a00",
            "id": "r-rtb-0d8384a254b1506751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-1",
            "route_table_id": "rtb-0d8384a254b150675",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-1",
            "route_table_id": "rtb-0d8384a254b150675"
          },
          "dependencies": [
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:route-table/rtb-073583b1ab0d31150",
            "id": "rtb-073583b1ab0d31150",
            "owner_id": "285795751798",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5b8d437986964db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "rtb-073583b1ab0d31150",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:route-table/rtb-02ae39ab868667c1f",
            "id": "rtb-02ae39ab868667c1f",
            "owner_id": "285795751798",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5b8d437986964db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "rtb-02ae39ab868667c1f",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:route-table/rtb-0d8384a254b150675",
            "id": "rtb-0d8384a254b150675",
            "owner_id": "285795751798",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00774438c7f345a00",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5b8d437986964db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "rtb-0d8384a254b150675",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0511a42b1e79b5565",
            "region": "us-west-1",
            "route_table_id": "rtb-073583b1ab0d31150",
            "subnet_id": "subnet-0f1a564c1c0979c6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08376c79410bdf37c",
            "region": "us-west-1",
            "route_table_id": "rtb-02ae39ab868667c1f",
            "subnet_id": "subnet-00f1c7a95fe784c94"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6b2127f5fb3e294",
            "region": "us-west-1",
            "route_table_id": "rtb-0d8384a254b150675",
            "subnet_id": "subnet-05cf1e71b62615f4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd1cbc87f326be8c",
            "region": "us-west-1",
            "route_table_id": "rtb-0d8384a254b150675",
            "subnet_id": "subnet-06c0aeae7ba4cfde8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:subnet/subnet-0f1a564c1c0979c6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1a564c1c0979c6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285795751798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "vpc_id": "vpc-0b5b8d437986964db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "subnet-0f1a564c1c0979c6a",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:subnet/subnet-00f1c7a95fe784c94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f1c7a95fe784c94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285795751798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "vpc_id": "vpc-0b5b8d437986964db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "subnet-00f1c7a95fe784c94",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:subnet/subnet-05cf1e71b62615f4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cf1e71b62615f4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285795751798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "vpc_id": "vpc-0b5b8d437986964db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "subnet-05cf1e71b62615f4c",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:subnet/subnet-06c0aeae7ba4cfde8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c0aeae7ba4cfde8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285795751798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "vpc_id": "vpc-0b5b8d437986964db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "subnet-06c0aeae7ba4cfde8",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:285795751798:vpc/vpc-0b5b8d437986964db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0a52e64003e781ca0",
            "default_route_table_id": "rtb-0c3344bbdf8e18e0e",
            "default_security_group_id": "sg-0801367255621d1de",
            "dhcp_options_id": "dopt-0e3329cd1a8aa7195",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5b8d437986964db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3344bbdf8e18e0e",
            "owner_id": "285795751798",
            "region": "us-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-primary",
              "Project": "hr-portal"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "285795751798",
            "id": "vpc-0b5b8d437986964db",
            "region": "us-west-1"
          }
        }
      ]
    }
  ]
}